--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "note taking app using express",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Oscar Medina",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
