--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "note taking app using express",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "author": "Oscar Medina",
   "license": "ISC",
   "dependencies": {
